[package]
name = "rust-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
dotenv = "0.15.0"
reqwest = "0.11.18"
serde_json = "1.0.97"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "rust-tracker"
path = "main.rs"
